--- a/projectile_motion/projectile_motion.ipynb
+++ b/projectile_motion/projectile_motion.ipynb
@@ -31,10 +31,10 @@
    "source": [
     "The projectile behavior in the coordinates $(x,y)$ is given by:\n",
     "\n",
-    "| $$x(t)$$ | $$y(t)$$ |\n",
-    "|--------------------|----------------------------------|\n",
-    "| $$x(t) = x_0 + v_xt$$ | $$y(t) = y_0+v_yt-\\frac{1}{2}gt^2$$ |\n",
-    "| $$x(t) = x_0 + v_0tcos\\theta$$ | $$y(t) = y_0+v_0tsin\\theta -\\frac{1}{2}gt^2$$ |\n",
+    " $$x(t)$$ | $$y(t)$$ \n",
+    "--------------------|----------------------------------\n",
+    " $$x(t) = x_0 + v_xt$$ | $$y(t) = y_0+v_yt-\\frac{1}{2}gt^2$$ \n",
+    " $$x(t) = x_0 + v_0tcos\\theta$$ | $$y(t) = y_0+v_0tsin\\theta -\\frac{1}{2}gt^2$$ \n",
     "\n",
     "The projectile's velocities are given by:\n",
     "\n",
